# VI-RT

./: .gitignore  CMakeLists.txt
VI-RT/: CMakeLists.txt
VI-RT/3DSortingStruct/: CMakeLists.txt
VI-RT/Camera/: CMakeLists.txt
VI-RT/Image/: CMakeLists.txt
VI-RT/Light/: CMakeLists.txt
VI-RT/Primitive/: CMakeLists.txt
VI-RT/Primitive/BRDF/: CMakeLists.txt
VI-RT/Primitive/Geometry/: CMakeLists.txt
VI-RT/Renderer/: CMakeLists.txt
VI-RT/Scene/: CMakeLists.txt  scene.cpp
VI-RT/Shader/: CMakeLists.txt
VI-RT/utils/: CMakeLists.txt  vector.hpp
